--- a/article.html
+++ b/article.html
@@ -43,7 +43,7 @@
               </svg></a>
           </div>
         </div>
-        <div class="header__mobileMenu js-open-desktop-menu"><span></span><span></span><span></span>
+        <div class="header__mobileMenu-btn js-open-mobile-menu"><span></span><span></span><span></span>
         </div>
       </div>
       <div class="header__menu">
@@ -137,6 +137,16 @@
                 <p class="service__description">Страхование ипотечного кредита по 2 документам!</p></a>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="header__mobileMenu-wrapper">
+        <div class="header__mobileMenu"> 
+          <ul class="header__mobileMenu-list">
+            <li class="header__mobileMenu-item js-reopen-desktop-menu"><a class="header__mobileMenu-link" href="#">Услуги</a></li>
+            <li class="header__mobileMenu-item"><a class="header__mobileMenu-link" href="#reviews">Отзывы</a></li>
+            <li class="header__mobileMenu-item"><a class="header__mobileMenu-link" href="#about">О нас</a></li>
+            <li class="header__mobileMenu-item"><a class="header__mobileMenu-link" href="#contacs">Контакты</a></li>
+          </ul><a class="button header__mobileMenu-button js-open-modal" href="" data-modal="request">Консультация   </a>
         </div>
       </div>
     </div>
@@ -355,6 +365,7 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/jquery.marquee@1.6.0/jquery.marquee.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
